# foundry

./: .buildinfo  .env  .envrc  .gitignore  .gitmodules  AGENTS.md  AuxiliaryPredictor.py  CLAUDE.md  CONTRIBUTING.md  Embeddings.py  Makefile  README.md  RESTRUCTURING_PLAN.md  RoseTTAFoldModel.py  SE3_network.py  SE3nv.spec  Track_module.py  analysis_util.py  apptainer.spec  arguments.py  base_apptainer.spec  chemical.py  ci-constraints.txt  contributing_link.html  data_loader.py  environment.yaml  evaluate.py  freeze_apptainer.spec  genindex.html  index.html  inference_apptainer.spec  installation_faq.html  kinematics.py  license_link.html  loss.py  objects.inv  parsers.py  predict.py  predict.sh  pyproject.toml  (+8 more)
RF2_allatom/: eval.py  (+19 more)
models/rf3/: CONTAINER.md  README.md  index.html  pyproject.toml  rf3-dev.def
models/rf3/configs/datasets/: base.yaml  pdb_and_distillation.yaml
models/rf3/configs/datasets/train/: disorder_distillation.yaml  domain_distillation.yaml  monomer_distillation.yaml  (+2 more)
models/rf3/configs/experiment/: rf3_run11-with-confidence.yaml
models/rf3/configs/inference_engine/: base.yaml  rf3.yaml
models/rf3/configs/trainer/: rf3_with_confidence.yaml
models/rf3/docs/: index.md
models/rf3/docs/examples/: 3en2_from_json_with_msa.json  7o1r_from_json.json  7xli_template_antigen_and_framework.json  9dfn_template_ligand_and_protein.json  index.rst  msa_folding.md
models/rf3/src/rf3/: _version.py  alignment.py  cli.py  inference.py  train.py  validate.py
models/rf3/tests/: conftest.py  test_af3_loss_symmetry.py  test_af3_losses.py  test_attention.py  test_chiral.py  test_chiral_metrics.py  test_clashing_chains.py  test_frames.py  test_ground_truth_template.py  test_inference_regression.py  test_inference_sampler.py  test_kinematics.py  test_layer_utils.py  test_lddt.py  test_loss_grads.py  test_loss_utils.py  test_metadata.py  test_metric_utils.py  test_mlff.py  test_outer_product.py  test_predicted_error.py  test_predicted_error_utils.py  test_rf3_alignment.py  test_rf3_inference.py  test_rf3_inference_engine.py  test_rf3_io.py  test_util_module.py  test_write_confidence.py
models/rf3/tests/data/: 1cyo.cif  1cyo_from_json.json  1cyo_with_ligand.json  5vht_from_file.cif  8vkf_from_file.cif
models/rf3/tests/integration/: conftest.py  test_basic_fold.py  test_cpu_gpu_parity.py  test_options.py
models/rfd3/: README.md  designability_vs_diversity.html  index.html  input.html  intro_inference_calculations.html  pyproject.toml  readme.html  readmelink.html
models/rfd3/configs/: train.yaml  validate.yaml
models/rfd3/configs/callbacks/: design_callbacks.yaml  dump_validation_structures.yaml  metrics_logging.yaml  ppi_design_callbacks.yaml  train_logging.yaml
models/rfd3/configs/datasets/: all.yaml  design_base.yaml  design_base_rfd3na.yaml  dna_base.yaml  indexed.yaml  ppi.yaml  ppi_inference.yaml  ppi_with_bcov_distillation.yaml  ppi_with_interdomain.yaml  sm_hbonds.yaml  unindexed.yaml
models/rfd3/configs/experiment/: a14-base-train.yaml  ppi.yaml  ppi_hdm.yaml  ppi_hdm_dist.yaml  ppi_hdm_hb.yaml  ppi_hdm_ss.yaml  ppi_hmm.yaml  pretrain.yaml  rfd3-NA-full.yaml  rfd3-ablation-blt.yaml  rfd3-ablation-clustering.yaml  rfd3-ablation-control.yaml  rfd3-ablation-monomerdistill.yaml  rfd3-ablation-recycling.yaml  rfd3-full-sparse-light.yaml  rfd3-full-sparse.yaml  rfd3-full-stage0.yaml  rfd3-full-stage1.yaml  rfd3-full.yaml  rfd3na-ss.yaml  rfd3na.yaml  rfd3na_af.yaml  rfd3na_fine_tune.yaml  rfd3na_no_distill.yaml  rfd3na_rm.yaml  test-unindexed.yaml  uncond-compact.yaml  uncond-main.yaml
models/rfd3/configs/inference_engine/: base.yaml  dev.yaml  rfdiffusion3.yaml
models/rfd3/configs/logger/: wandb.yaml
models/rfd3/configs/pipelines/: aa_ppi_design_af3_val_24_chunks.yaml  aa_ppi_design_af3_val_72_chunks.yaml  aa_ppi_design_af3_validation.yaml  aa_ppi_design_af_multimer_validation.yaml  legacy_aa_design_validation.yaml  pipeline.yaml  unconditional_eval.yaml
models/rfd3/configs/trainer/: aa_design.yaml
models/rfd3/docs/: binder_design.md  designability_vs_diversity.md  enzyme_design.md  enzyme_design_tutorial.md  index.rst  input.md  intro_inference_calculations.md  na_binder_design.json  na_binder_design.md  na_binder_tutorial.md  ppi_design_tutorial.md  protein_binder_design.md  sm_binder_design.md  symmetry.md
models/rfd3/docs/enzyme_tutorial_files/: rfd3_enzyme_tutorial.json
models/rfd3/docs/examples/: atom23_design.json  atom23_design.md  demo.json  enzyme_design.json  na_binder_design.json  na_binder_design.md  protein_binder_design.md  symmetry.json  symmetry.md
models/rfd3/docs/na_tutorial_files/: rfd3_na_tutorial.json
models/rfd3/docs/ppi_tutorial_files/: ppi_tutorial.yaml
models/rfd3/docs/tutorials/: RFdiffusion3_installation_tutorial.md  advanced_enzyme_design_tutorial.md  binder_design_small_molecule.md  binder_design_tutorial.md  enzyme_design_tutorial.md  intermediate_enzyme_design_tutorial.md  na_binder_tutorial.md  ppi_design_tutorial.md
models/rfd3/examples/: enzyme_design.html  na_binder_design.html  protein_binder_design.html  sm_binder_design.html  symmetry.html
models/rfd3/src/rfd3/: callbacks.py  cli.py  constants.py  engine.py  run_inference.py  train.py
models/rfd3/tests/: conftest.py  test_aa_design.py  test_bond_preservation_cases.py  test_cif_duplicate_ids.py  test_conditioning.py  test_glycines.py  test_legacy_ptm_bonds.py  test_ligand_partial_fix.py  test_metrics.py  test_partial_diffusion.py  test_rfd3_engine.py  test_rfd3_input_parsing.py  test_rfd3_io.py  test_rfd3_trainer_utils.py  test_selections.py  test_symmetry.py  test_symmetry_contigs.py  test_symmetry_frames.py  test_tokenization.py  test_unindexing.py
models/rfd3/tests/transforms/: test_pipeline_regression.py
models/rfd3/tutorials/: RFdiffusion3_installation_tutorial.html  enzyme_design_tutorial.html  intermediate_enzyme_design_tutorial.html  na_binder_tutorial.html  ppi_design_tutorial.html
tools/envs/molecore_foundry/: AGENT_SETUP.md  PACKAGES.md  README.md  pyproject.toml
tools/envs/molecore_foundry/scripts/: install_pyrosetta.py
(+1108 files in other folders)
