[project]
name = "modelhub"
dynamic = ["version"]
description = "Base repository for models at the University of Washington's Institute for Protein Design"
readme = "README.md"
requires-python = ">= 3.10"
authors = [
    { name = "Bakerlab", email = "" },
]

# Build settings ----------------------------------------------------------------------
[build-system]
requires = [
    "hatchling",
    "hatch-vcs == 0.4",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/modelhub/version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/modelhub"]

# Formatting & linting settings -------------------------------------------------------
[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "env",
    ".venv",
    "venv",
    "*.ipynb",
    "dev.py",
    "archive",
    "src/modelhub/chemical.py", # TEMPORARY
    "src/modelhub/util_module.py", # TEMPORARY
    "src/modelhub/utils/predicted_error.py", # TEMPORARY
    "src/modelhub/util.py", # TEMPORARY
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Sort imports
extend-select = ["I"]

ignore = [
    "F722", # for jaxtyping shape annotation
    "F821", # temporary to avoid jaxtyping warnings, see: https://github.com/astral-sh/ruff/issues/17386
    "E741",  # enable us to use variables like "L"
]
